[gd_scene load_steps=2 format=3 uid="uid://cltiijtc2qwh7"]

[ext_resource type="Script" uid="uid://b1y2auy3thhl8" path="res://scripts/NNClassifierScene.gd" id="1_errlg"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_errlg")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="PointArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="TrainButton" type="Button" parent="."]
offset_left = 900.0
offset_top = 550.0
offset_right = 1001.0
offset_bottom = 581.0
scale = Vector2(2, 2)
text = "Train Model"

[node name="NNNode" type="NNNode" parent="."]

[node name="LossLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="TrainButton" to="." method="_on_train_button_pressed"]
